# got-audit

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  ROADMAP.md  build.sh  got-audit.1  got-audit.spec
.claude/: PROJECT_CONTEXT.md
.github/workflows/: ci.yml
include/: elf_parser.h  got_auditor.h  process_memory.h  report.h
src/: elf_parser.cpp  got_auditor.cpp  main.cpp  process_memory.cpp  report.cpp
tests/: run_tests.sh  test_program.c
